protocolmodel/mcrl2/testing/errors/error_5004.mcf
% E5004 - Invalid peer info
[true* . ERROR_MSG(E5004)] false